# tgBot

./: pyproject.toml
tg_userbot/: main_app.py
tg_userbot/brain/: __init__.py  auth_data.py  brain.py
