[tool.poetry]
name = "tg-userbot"
version = "0.1.0"
description = ""
authors = ["Michail Belousov <mihail.belousow@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_userbot"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.70"
tgcrypto = "^1.2.5"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
